* Added search field to Species selector * Added into to RSS feed